--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "md5-hex": "^1.3.0",
     "vue": "^1.0.18",
+    "vue-lazyload": "^0.7.2",
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.13",
     "vue-touch": "^1.1.0"
