--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-lazyload": "^0.7.2",
     "vue-resource": "^0.7.0",
     "vue-router": "^0.7.13",
+    "vue-swipe": "^0.2.6",
     "vue-touch": "^1.1.0"
   },
   "devDependencies": {
